--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ckeditor5",
+  "name": "@soar-education/ckeditor5-classic-with-bubble",
   "version": "25.0.0",
   "description": "The development environment of CKEditor 5 – the best browser-based rich text editor.",
-  "private": true,
   "keywords": [
     "ckeditor",
     "ckeditor5",
@@ -133,10 +132,12 @@
   "author": "CKSource (http://cksource.com/)",
   "license": "GPL-2.0-or-later",
   "homepage": "https://ckeditor.com/ckeditor-5",
-  "bugs": "https://github.com/ckeditor/ckeditor5/issues",
+  "bugs": {
+    "url": "https://github.com/ckeditor/ckeditor5/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckeditor/ckeditor5.git"
+    "url": "git+https://github.com/ckeditor/ckeditor5.git"
   },
   "scripts": {
     "lint": "eslint --quiet '**/*.js'",
